// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`%{nickname} %{action} issue %{code} 1`] = `
Object {
  "body": Object {
    "end": 35,
    "items": Array [
      Object {
        "end": 11,
        "key": "nickname",
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "start": 1,
        "type": 4,
      },
      Object {
        "end": 12,
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "start": 11,
        "type": 3,
        "value": " ",
      },
      Object {
        "end": 21,
        "key": "action",
        "loc": Object {
          "end": Object {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "start": Object {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
        },
        "start": 13,
        "type": 4,
      },
      Object {
        "end": 28,
        "loc": Object {
          "end": Object {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
          "start": Object {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
        },
        "start": 21,
        "type": 3,
        "value": " issue ",
      },
      Object {
        "end": 35,
        "key": "code",
        "loc": Object {
          "end": Object {
            "column": 36,
            "line": 1,
            "offset": 35,
          },
          "start": Object {
            "column": 30,
            "line": 1,
            "offset": 29,
          },
        },
        "start": 29,
        "type": 4,
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 36,
        "line": 1,
        "offset": 35,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 35,
  "loc": Object {
    "end": Object {
      "column": 36,
      "line": 1,
      "offset": 35,
    },
    "source": "%{nickname} %{action} issue %{code}",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi % {name}! 1`] = `
Object {
  "body": Object {
    "end": 12,
    "items": Array [
      Object {
        "end": 5,
        "loc": Object {
          "end": Object {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi % ",
      },
      Object {
        "end": 11,
        "key": "name",
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "start": 5,
        "type": 4,
      },
      Object {
        "end": 12,
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "start": 11,
        "type": 3,
        "value": "!",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": Object {
    "end": Object {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi % {name}!",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi %% name ! 1`] = `
Object {
  "body": Object {
    "end": 12,
    "items": Array [
      Object {
        "end": 12,
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi %% name !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": Object {
    "end": Object {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi %% name !",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi %@:name ! 1`] = `
Object {
  "body": Object {
    "end": 12,
    "items": Array [
      Object {
        "end": 4,
        "loc": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi %",
      },
      Object {
        "end": 10,
        "key": Object {
          "end": 10,
          "loc": Object {
            "end": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": Object {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "start": 6,
          "type": 7,
          "value": "name",
        },
        "loc": Object {
          "end": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 6,
      },
      Object {
        "end": 12,
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": Object {
    "end": Object {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi %@:name !",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi %{name}! 1`] = `
Object {
  "body": Object {
    "end": 11,
    "items": Array [
      Object {
        "end": 3,
        "loc": Object {
          "end": Object {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      Object {
        "end": 10,
        "key": "name",
        "loc": Object {
          "end": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 4,
      },
      Object {
        "end": 11,
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": "!",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi %{name}!",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`hi %d %s ! 1`] = `
Object {
  "body": Object {
    "end": 10,
    "items": Array [
      Object {
        "end": 10,
        "loc": Object {
          "end": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi %d %s !",
      },
    ],
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 10,
  "loc": Object {
    "end": Object {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "source": "hi %d %s !",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`no apples %| one apple % |  too much apples   1`] = `
Object {
  "body": Object {
    "cases": Array [
      Object {
        "end": 0,
        "items": Array [
          Object {
            "end": 11,
            "loc": Object {
              "end": Object {
                "column": 12,
                "line": 1,
                "offset": 11,
              },
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "start": 0,
            "type": 3,
            "value": "no apples %",
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      Object {
        "end": 13,
        "items": Array [
          Object {
            "end": 24,
            "loc": Object {
              "end": Object {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
              "start": Object {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
            },
            "start": 13,
            "type": 3,
            "value": "one apple %",
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 25,
            "line": 1,
            "offset": 24,
          },
          "start": Object {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
        },
        "start": 13,
        "type": 2,
      },
      Object {
        "end": 45,
        "items": Array [
          Object {
            "end": 45,
            "loc": Object {
              "end": Object {
                "column": 46,
                "line": 1,
                "offset": 45,
              },
              "start": Object {
                "column": 29,
                "line": 1,
                "offset": 28,
              },
            },
            "start": 28,
            "type": 3,
            "value": "too much apples  ",
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 46,
            "line": 1,
            "offset": 45,
          },
          "start": Object {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
        },
        "start": 28,
        "type": 2,
      },
    ],
    "end": 45,
    "loc": Object {
      "end": Object {
        "column": 46,
        "line": 1,
        "offset": 45,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 45,
  "loc": Object {
    "end": Object {
      "column": 46,
      "line": 1,
      "offset": 45,
    },
    "source": "no apples %| one apple % |  too much apples  ",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;
